--- a/app/views/users/register.html.erb
+++ b/app/views/users/register.html.erb
@@ -26,8 +26,10 @@
         <% end %>
 
 
+        <div class="center">
+         <%= f.submit %>
+        </div>
 
-        <%= f.submit %>
 
 
     <% end %>
