--- a/app/views/work_orders/index.html.erb
+++ b/app/views/work_orders/index.html.erb
@@ -1,4 +1,4 @@
-<div id="top_float_left">
+<div id="top_float_left span-110">
   <% if current_user.client == true %>
       <%= link_to(image_tag('add.png', :title => [t "workorder.t_add_new"], :align => "bottom", :hspace => "2"), :controller => "work_orders", :action => "new") %><%= link_to [t "workorder.t_add_new"], :controller => "work_orders", :action => "new"%>
   <% else %>
@@ -6,7 +6,6 @@
    <% end %>
   <%= link_to(image_tag("back.png", :title=> (t "global.back"), :align => "bottom", :hspace => "2"), :back) %><%= link_to (t "global.back"), :back %>
 </div>
-<br>
 <div id="ddtabs1" class="basictab">
   <ul>
     <li><a href="#new" rel="tab1"><%= t "workorder.tab_menu_new" %>&nbsp;(<% if @new_work_orders.count > 0 %><span style="color:red;"><%= @new_work_orders.count %></span><% else %><%= @new_work_orders.count %><% end %>)</a></li>
@@ -32,3 +31,4 @@
     </div>
   </div>
 </div>
+<div style="clear:both;"></div>
