--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,13 +1,13 @@
 <div id="top_float_left">
+  <h1><%= t "global.quick_links" %></h1>
   <%= link_to(image_tag("exit.png", :title=> (t "global.exit"), :align => "bottom", :hspace => "2"), users_path) %><%= link_to (t "global.exit"), users_path %>
 </div>
 <br>
 <%= simple_form_for(@user) do |f| %>
     <%= f.error_notification %>
-    <div>
+    <div id=middle_col>
       <fieldset>
         <legend><%= t "global.required" %></legend>
-        <div class="span-430">
 
           <%= f.input :name, :hint =>(t "user.name_eg"), :label =>(t "user.name") %>
           <%= f.input :username, :label => (t "user.username") %>
@@ -15,17 +15,13 @@
           <%= f.input :password_confirmation, :label => (t "user.password_confirmation"), :required => true %>
           <%= f.input :email, :label => (t "global.email") %>
 
-        </div>
-        <div class="span-470">
           <%= f.input :address, :input_html => {:rows => 4, :cols => 30}, :label => (t "global.address") %>
           <%= f.input :city, :label => (t "global.city") %>
           <%= f.input :zip, :label =>(t "global.zip") %>
           <%= f.input :state, :label => (t "global.state") %>
 
 
-        </div>
       </fieldset>
-      <div class="span-550 first">
         <fieldset>
           <legend><%= t "global.contact_numbers" %></legend>
           <%= f.input :phone, :input_html => {:size => 30}, :label => (t "global.phone") %>
@@ -38,9 +34,7 @@
               <%= hidden_field_tag "user[created_by]", current_user.username %>
           <% end %>
         </fieldset>
-      </div>
       <% if can? :manage, :all %>
-          <div class="span-15 last">
             <fieldset>
               <legend><%= t "global.special" %></legend>
 
@@ -57,7 +51,6 @@
       <% end %>
 
 
-    </div>
 
     <div class="clear"></div>
     <div class="center">
