--- a/app/views/work_orders/new.html.erb
+++ b/app/views/work_orders/new.html.erb
@@ -1,43 +1,45 @@
 <!--mytodo - heaps to fix up here....add tabs and all fields required.-->
 <div id="top_float_left">
+  <h1><%= t'global.quick_links' %></h1>
   <%= link_to(image_tag("exit.png", :title=> (t "global.exit"), :align => "bottom", :hspace => "2"), work_orders_path) %><%= link_to (t "global.exit"), work_orders_path %>
   <%= link_to(image_tag("back.png", :title=> (t "global.back"), :align => "bottom", :hspace => "2"), :back) %><%= link_to (t "global.back"), :back %>
 </div>
-<div>
-      <h1><%= @title || "" %></h1>
-    </div>
-<div id="ddtabs1" class="basictab">
-  <ul>
-    <li><a href="#<%= t "workorder.tab_menu_basic_name" %>" rel="sc1"><%= (t "workorder.tab_menu_basic") %></a></li>
-  </ul>
-</div>
-<div class="tabcontainer">
-  <div id="sc1" class="tabcontent">
-    <%= simple_form_for(@work_order) do |f| %>
-        <%= f.error_notification %>
-        <% if current_user.employee == true %>
-            <%= f.input :user_id, :as => :hidden, :input_html => { :value => params[:client_id] } %>
-        <% end %>
-        <%= f.input :subject, :label => (t "workorder.subject"), :input_html => { :size => 60 } %>
-        <%= f.association :priority_list, :label => (t "workorder.priority"), :include_blank => false %>
-
-        <div class="clear"></div>
-        <div class="span-180 text_right">
-          <%= (t "workorder.details") %>
-        </div>
-        <div class="span-670">
-          <%= ckeditor_tag 'work_order[description]', @work_order.description, :class => 'ckeditor' %>
-        </div>
-        <%= f.input :edited_by, :as => :hidden, :input_html => { :value => current_user.username } %>
-        <%= f.input :created_by, :as => :hidden, :input_html => { :value => current_user.username } %>
-        <%= f.input :updated_at, :as => :hidden, :input_html => { :value => Time.now } %>
-        <%= f.submit %>
-        <div class="clear"></div>
-        <div class="center">
-          <%= f.submit %>
-        </div>
-        <div class="clear"></div>
-
-    <% end %>
+<div class="centered">
+  <div id="ddtabs1" class="basictab">
+    <ul>
+      <li><a href="#<%= t "workorder.tab_menu_basic_name" %>" rel="sc1"><%= (t "workorder.tab_menu_basic") %></a></li>
+    </ul>
   </div>
+
+  <div class="tabcontainer">
+    <div id="sc1" class="tabcontent">
+      <%= simple_form_for(@work_order) do |f| %>
+          <%= f.error_notification %>
+          <% if current_user.employee == true %>
+              <%= f.input :user_id, :as => :hidden, :input_html => { :value => params[:client_id] } %>
+          <% end %>
+          <%= f.input :subject, :label => (t "workorder.subject"), :input_html => { :size => 60 } %>
+          <%= f.association :priority_list, :label => (t "workorder.priority"), :include_blank => false %>
+
+
+          <div class="label select required">
+            <%= (t "workorder.details") %>
+          </div>
+          <div class="centered">
+            <%= ckeditor_tag 'work_order[description]', @work_order.description, :class => 'simple_form textarea ckeditor' %>
+          </div>
+          <%= f.input :edited_by, :as => :hidden, :input_html => { :value => current_user.username } %>
+          <%= f.input :created_by, :as => :hidden, :input_html => { :value => current_user.username } %>
+          <%= f.input :updated_at, :as => :hidden, :input_html => { :value => Time.now } %>
+
+          <div class="clear"></div>
+          <div class="center">
+            <%= f.submit %>
+          </div>
+
+      <% end %>
+    </div>
+  </div>
+
+
 </div>
