--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -1,6 +1,10 @@
-body {width:100%;margin:0.9px;padding:0;border:0;vertical-align:baseline; background-color: white;font-family: Verdana, Helvetica, Arial,serif;font-size: 10px;}
+body {width:100%;margin:0.9px;padding:0;border:0;vertical-align:baseline; background-color: white;font-family: Verdana, Helvetica, Arial,serif;font-size: 11px;}
 a img {border: none;}
 h6 {width: 95%;font-family: Verdana, Helvetica, Arial,fantasy;font-size: 12px;}
+#middle_col {clear:none;}
+.centered {margin-left:160px;margin-right:160px; padding:15px 0 15px 15px 15px}
+.module {background-color:#ededff;border:3px solid black}
+#page_title {margin-left:160px;margin-right:160px;text-align:center;}
 #index_table {border-collapse:collapse;}
 #index_table td {border: 1px solid #000066;padding:3px 7px 2px 7px;}
 #index_table th {color: #ffffff;background-color: #4B7399;border: 1px solid #000066;padding:3px 7px 2px 7px;}
@@ -17,10 +21,10 @@ h6 {width: 95%;font-family: Verdana, Helvetica, Arial,fantasy;font-size: 12px;}
 .text_right{text-align:right;}
 #container {padding: 5px 20px 5px 20px;text-align:left;}
 #yield {margin: 0 auto;}
-#yield h1 {display:inline-block;padding-right: 5px;font-size:16px;text-decoration:underline;color: #999999;}
+#yield h1 {display:inline-block;margin-leftpadding-right:20px;font-size:16px;color: #999999;}
 /*#menu {width: 100%;float:left;margin: 0 auto;background-color: #FFF;padding: 20px 40px;border: solid 1px black;}*/
 /*FLASH NOTICES >>>*/
-#flash_notice, #flash_alert {padding: 4px 30px 4px 30px;margin: 10px 0;display:inline;}
+#flash_notice, #flash_alert {padding: 4px 30px 4px 30px;margin:160px 10px 10px 10px 0;display:block;}
 #flash_notice {background: url(/images/tick.png) 8px 5px no-repeat #CFC;border: solid 2px #6C6;font-weight:bold;}
 #flash_alert {background: url(/images/exclamation.png) 8px 5px no-repeat #FCC;border: solid 2px #C66;}
 /*FLASH NOTICES <<<*/
@@ -31,10 +35,9 @@ h6 {width: 95%;font-family: Verdana, Helvetica, Arial,fantasy;font-size: 12px;}
 #errorExplanation ul { margin: 2px 24px;}
 #errorExplanation ul li { font-size: 12px; list-style: disc; }
 #menu_tabs { margin: 0 auto;}
-#right_bar { width:15%; height:100%; float:right; border: 1px solid #000000; text-align: left; background-color: #ccffcc; font-size:10px; padding:3px;}
 .round { -moz-border-radius:10px; -webkit-border-radius:10px;}
-#footer { width:100%; float:left; color: #FFF; text-align: center; padding: 4px 0;}
-.footer_link a {color: #FFF;font-size:x-small;}
+#footer { width:100%; float:left; text-align: center; padding: 4px 0;}
+#footer_link a {color:blue;font-size:x-small;}
 #header {text-align:center; padding-bottom:2px;}
 .even td {background-color: #E3E6FF;}
 .odd td {background-color: #ffffff;}
@@ -44,21 +47,12 @@ h6 {width: 95%;font-family: Verdana, Helvetica, Arial,fantasy;font-size: 12px;}
 .priority_main_3 td {background-color: #ffcc00;}
 .priority_main_4 td {background-color: #ff9999; font-weight:bold;}
 .priority_main_5 td {background-color: #cc0033; font-weight:bolder;}
-
-/*Testing css out on sub menu system*/
-.sub_menu {}
-.sub_menu ul { margin: 12px; padding: 7px 0 19px; font-weight: bold; list-style-type: none; text-align: left; /*set to left, center, or right to align the menu as desired*/}
-.sub_menu ul li{display: block;}
-.sub_menu li a {text-decoration: none;padding: 6px;border-bottom: none;background-color: #4B7399; color: #ffffff; border-left: 1px solid #999999; border-right: 1px solid #999999; border-top: 1px solid #999999; border-bottom: #edf2f6;}
-.back {background:url(/images/tick.png) 8px 5px no-repeat;background-color:ButtonFace;padding: 4px 30px 4px 30px;margin: 10px 0;}
-.back i:hover{background-color:aqua;}
-
 #user_info_menu { font-size:10px; float:right;color: white;padding-top: 6px;padding-right: 13px;}
 #user_info_menu a { color: white;}
-#top_float_left {padding-top:0;font-size:10px;float:left;}
-#toolbar_menu {width:95%;padding:5px 5px 5px 5px;}
-.button {padding:inherit; margin-top:-30px;}
+#top_float_left {font-size:10px;float:left;border:1px solid silver;overflow:hidden;height:100%;width:130px;padding:5px 5px 20px 5px;line-height:1.5em;}
+#top_float_left h1 {display:block;font-size:12px;padding-right:0;text-align:center;font-weight:bold;}
 
+/* BOF Pagination CSS styles*/
 .pagination {margin: 20px 0;}
 .pagination a, .pagination span {display: block; float: left; margin-right: 1px; }
 .pagination span.disabled { color: #999; border: 1px solid #DDD; }
@@ -66,14 +60,8 @@ h6 {width: 95%;font-family: Verdana, Helvetica, Arial,fantasy;font-size: 12px;}
 .pagination a { text-decoration: none; color: #105CB6; border: 1px solid #9AAFE5;background: #ccccff;}
 .pagination a:hover, .pagination a:focus {color: #003; border-color: #003; }
 .pagination:after {content: "."; display: block; height: 0;clear: both; visibility: hidden; }
-  /** html .pagination {*/
-    /*height: 1%; }*/
-  /**:first-child+html .pagination {*/
-    /*overflow: hidden; }*/
-
-
+/* EOF - Pagination CSS STYLES*/
 /*Menu */
-/*Template for creating menu*/
 /*
 #navMenu li {float: left; font-size: 10px; line-height: 28px; position: relative; z-index: 2;}
 #navMenu ul li a {color: #242525; display: block; font-family: Arial,Helvetica,sans-serif; text-align: left; width: 119px;}
@@ -92,21 +80,14 @@ h6 {width: 95%;font-family: Verdana, Helvetica, Arial,fantasy;font-size: 12px;}
 #menu ul{margin: 0;padding: 0;list-style-type: none;}
 #menu li{float: left;position: relative;display: inline-block;z-index: 2;}
 #menu ul li a{display: inline-block;background:black;color: white; padding: 8px 10px;text-decoration:none;border-bottom:2px solid black;}
-#menu ul li ul li a{width: 160px;}/*width of sub menus*/
+#menu ul li ul li a{width:160px;}/*width of sub menus*/
 #menu ul li:hover ul {visibility: visible;}
 #menu ul ul {position: absolute; visibility: hidden }
-#menu ul li a.selected {border-bottom:2px solid red}
-#menu li a.selected:hover{color: #4b7399;}
-#menu ul li:hover ul li a:hover {background:black}
-#menu li a:hover {color: #4b7399;}
+#menu ul li a.selected {background:#333333;border-bottom:2px solid red}
+#menu li a.selected:hover{color:white;}
+#menu ul li:hover ul li a:hover {background:#333333;}
+#menu li a:hover {color:white;background-color:#333333;}
 #menu ul:hover {background:#fff;}
-
-/*Sub Menu Options*/
-/*#sub_menu ul li {background-color: #F5F0ED; border-bottom: 1px solid #FBB76A; border-left: 2px solid #990000; border-right: 2px solid #990000; ; text-indent: 6px; top: -1px; width: 119px;}*/
-#sub_menu {display: block; height: 60px;}
-#sub_menu ul ul {position: absolute; visibility: hidden;width:200px; }
-/*#menu ul{margin: 0;padding: 0;list-style-type: none; }*/
-/*Top level list items*/
 
 /*Top level menu link items style*/
 /*#menu ul li a{display: block;background: #414141; *//*background of tabs (default state)*//*color: white; padding: 8px 10px;border-right: 1px solid #778; text-decoration: none;}*/
@@ -171,34 +152,34 @@ fieldset.settings label { display: block; }
 /*input[type=text], input[type=password], input[type=url], input[type=email], input.text, input.title, textarea, select {margin:0.5em 0;}*/
 /*input.text, input.title {width:200px;padding:5px;}*/
 input.title {font-size:1.5em;}
-.simple_form div.input { margin-bottom: 5px;}
-.simple_form div.textile { margin-left: 190px;}
-.simple_form label {width:170px;float:left;text-align:right; margin: 2px 10px;}
-div.boolean, .simple_form input[type='submit'] { position:relative;text-transform:capitalize;padding:5px;}
-div.boolean label, label.collection_radio {float: none;margin: 0;}
-label.collection_radio { margin-right: 10px;vertical-align:-2px; margin-left:2px; display:table-row; height:25px; text-align:left;}
-.field_with_errors {/*background-color: #ff3333;*/}
+.simple_form {margin-bottom:0;}
+.simple_form div.input, div.textarea, div.textile {font-size:100%; margin-bottom: 5px;width:100%;clear:left; display:inline-block;}
+.simple_form label {float:left;text-align:right; margin: 2px 10px;display:block;width:auto;min-width:33%}
+.simple_form input[type='submit'] {text-transform:capitalize;display:inline;}
+.simple_form div.boolean {text-transform:none;}
+.simple_form button {position:relative;}
+.simple_form label.collection_radio {margin-right: 10px;vertical-align:-2px; margin-left:2px; display:table-row;text-align:left;float:none;width:0;}
 .error_notification {padding: 4px 30px 4px 30px;margin: 10px 60% 10px 50px; background: url(/images/exclamation.png) 8px 5px no-repeat #FCC;border: solid 2px #C66;}
 .simple_form .error {
   clear:left;
   color: #ff3333;
-  display: inline-block;
-  margin-left: 190px;
+  display:block;
+  margin-left:33%;
   font-size:10px;
+  padding-left:20px;
   font-style:italic;
   font-weight:bold;
   text-transform:capitalize;
 }
 .simple_form .hint {
   clear: left;
-  margin-left: 190px;
-  font-size:12px;
+  margin-left: 33%;
+  padding-left:20px;
   color: #555;
   display: block;
   font-style: italic;
 }
 input.radio {
-  margin-right: 5px;
   vertical-align: -3px;
 }
 input.check_boxes {
@@ -206,14 +187,13 @@ input.check_boxes {
   vertical-align: -3px;
 }
 label.collection_check_boxes {
-  float: none;
   margin: 0;
   vertical-align: -2px;
   margin-left:   2px;
 }
-input.required {border: 2px solid #8b0000; background-color:#ffffcc;}
-textarea.required {border: 2px solid #8b0000; background-color:#ffffcc;}
-.select_required {border: 2px solid #8b0000; background-color:#ffffcc; padding:0.4em;}
+input.required, input.optional, textarea.optional, textarea.required, {display:block;}
+input.required, textarea.required, .select_required {border: 2px solid #8b0000; background-color:#ffffcc;font-size:inherit;}
+.select_required {padding:0.4em;}
 /*JQUERY Custom Styling*/
 .toggler {position: relative; padding: .4em 0 .5em 0 }
 	#button { padding: .5em 1em; text-decoration: none; }
@@ -223,7 +203,7 @@ textarea.required {border: 2px solid #8b0000; background-color:#ffffcc;}
 
 /*EOF JQUERY Customer Styling*/
 /*BOF Basic Tabs/menu Css*/
-.basictab, .tabcontainer {margin-left:160px; margin-right:160px;}
+/*.basictab, .tabcontainer, .simple_form {margin-left:160px; margin-right:160px;}*/
 .basictab ul { margin: 0; padding: 7px 0 5px; font-weight: bold; list-style-type: none; text-align: left; /*set to left, center, or right to align the menu as desired*/}
 .basictab ul li{position: relative; display: inline;}
 .basictab li a {text-decoration: none;padding: 6px;border-bottom: none;background-color: #4B7399; color: #ffffff; border-left: 1px solid #999999; border-right: 1px solid #999999; border-top: 1px solid #999999; border-bottom: #edf2f6;}
@@ -231,7 +211,7 @@ textarea.required {border: 2px solid #8b0000; background-color:#ffffcc;}
 .basictab li a:hover, .basictab li a.current { background-color: #edf2f6; color: black;}
 .basictab li a:active {color: black;}
 .tabcontainer {background-color: #edf2f6;}
-.tabcontent {padding-top: 10px; border: 1px solid #999999; display: none;}
+.tabcontent {padding-top: 10px; border: 1px solid #999999; display: none;overflow:hidden;}
 /*EOF Basic Tabs/menu Css*/
 
 caption {background:#eee;}
@@ -247,12 +227,11 @@ caption {background:#eee;}
 .last {margin-right:0;padding-right:0;}
 .top {margin-top:0;padding-top:0;}
 .bottom {margin-bottom:0;padding-bottom:0;}
-.center {margin-bottom:0;padding-bottom:0; width:100%; text-align:center;}
-fieldset {padding:0 1.4em 1.4em 1.4em;margin:0 0 1.5em 0;border:1px solid #ccc;}
+.center {margin-bottom:0.5em;padding-top:0.5em; width:100%; text-align:center;}
+/*fieldset {padding:0 1.4em 1.4em 1.4em;margin:0 0 1.5em 0;border:1px solid #ccc;}*/
 legend {font-weight:bold;font-size:1.2em;margin-top:-0.2em;margin-bottom:1em;}
 fieldset, #IE8#HACK {padding-top:1.4em;}
 legend, #IE8#HACK {margin-top:0;margin-bottom:0;}
-.column, .span-30, .span-70, .span-110, .span-150, .span-180, .span-190, .span-230, .span-270, .span-310, .span-350, .span-390, .span-430, .span-470, .span-510, .span-550, .span-590, .span-630, .span-670, .span-710, .span-750, .span-790, .span-830, .span-870, .span-910, .span-950 {float:left;margin-right:10px;display:inline;}
 .last {margin-right:0;}
 .span-30 {width:30px;}
 .span-70 {width:70px;}
@@ -279,128 +258,3 @@ legend, #IE8#HACK {margin-top:0;margin-bottom:0;}
 .span-870 {width:870px;}
 .span-910 {width:910px;}
 .span-950 {width:950px;margin-right:0;}
-input.span-1, textarea.span-1, input.span-2, textarea.span-2, input.span-3, textarea.span-3, input.span-4, textarea.span-4, input.span-5, textarea.span-5, input.span-6, textarea.span-6, input.span-7, textarea.span-7, input.span-8, textarea.span-8, input.span-9, textarea.span-9, input.span-10, textarea.span-10, input.span-11, textarea.span-11, input.span-12, textarea.span-12, input.span-13, textarea.span-13, input.span-14, textarea.span-14, input.span-15, textarea.span-15, input.span-16, textarea.span-16, input.span-17, textarea.span-17, input.span-18, textarea.span-18, input.span-19, textarea.span-19, input.span-20, textarea.span-20, input.span-21, textarea.span-21, input.span-22, textarea.span-22, input.span-23, textarea.span-23, input.span-24, textarea.span-24 {border-left-width:1px;border-right-width:1px;padding-left:5px;padding-right:5px;}
-input.span-1, textarea.span-1 {width:18px;}
-input.span-2, textarea.span-2 {width:58px;}
-input.span-3, textarea.span-3 {width:98px;}
-input.span-4, textarea.span-4 {width:138px;}
-input.span-5, textarea.span-5 {width:178px;}
-input.span-6, textarea.span-6 {width:218px;}
-input.span-7, textarea.span-7 {width:258px;}
-input.span-8, textarea.span-8 {width:298px;}
-input.span-9, textarea.span-9 {width:338px;}
-input.span-10, textarea.span-10 {width:378px;}
-input.span-11, textarea.span-11 {width:418px;}
-input.span-12, textarea.span-12 {width:458px;}
-input.span-13, textarea.span-13 {width:498px;}
-input.span-14, textarea.span-14 {width:538px;}
-input.span-15, textarea.span-15 {width:578px;}
-input.span-16, textarea.span-16 {width:618px;}
-input.span-17, textarea.span-17 {width:658px;}
-input.span-18, textarea.span-18 {width:698px;}
-input.span-19, textarea.span-19 {width:738px;}
-input.span-20, textarea.span-20 {width:778px;}
-input.span-21, textarea.span-21 {width:818px;}
-input.span-22, textarea.span-22 {width:858px;}
-input.span-23, textarea.span-23 {width:898px;}
-input.span-24, textarea.span-24 {width:938px;}
-.append-1 {padding-right:40px;}
-.append-2 {padding-right:80px;}
-.append-3 {padding-right:120px;}
-.append-4 {padding-right:160px;}
-.append-5 {padding-right:200px;}
-.append-6 {padding-right:240px;}
-.append-7 {padding-right:280px;}
-.append-8 {padding-right:320px;}
-.append-9 {padding-right:360px;}
-.append-10 {padding-right:400px;}
-.append-11 {padding-right:440px;}
-.append-12 {padding-right:480px;}
-.append-13 {padding-right:520px;}
-.append-14 {padding-right:560px;}
-.append-15 {padding-right:600px;}
-.append-16 {padding-right:640px;}
-.append-17 {padding-right:680px;}
-.append-18 {padding-right:720px;}
-.append-19 {padding-right:760px;}
-.append-20 {padding-right:800px;}
-.append-21 {padding-right:840px;}
-.append-22 {padding-right:880px;}
-.append-23 {padding-right:920px;}
-.prepend-1 {padding-left:40px;}
-.prepend-2 {padding-left:80px;}
-.prepend-3 {padding-left:120px;}
-.prepend-4 {padding-left:160px;}
-.prepend-5 {padding-left:200px;}
-.prepend-6 {padding-left:240px;}
-.prepend-7 {padding-left:280px;}
-.prepend-8 {padding-left:320px;}
-.prepend-9 {padding-left:360px;}
-.prepend-10 {padding-left:400px;}
-.prepend-11 {padding-left:440px;}
-.prepend-12 {padding-left:480px;}
-.prepend-13 {padding-left:520px;}
-.prepend-14 {padding-left:560px;}
-.prepend-15 {padding-left:600px;}
-.prepend-16 {padding-left:640px;}
-.prepend-17 {padding-left:680px;}
-.prepend-18 {padding-left:720px;}
-.prepend-19 {padding-left:760px;}
-.prepend-20 {padding-left:800px;}
-.prepend-21 {padding-left:840px;}
-.prepend-22 {padding-left:880px;}
-.prepend-23 {padding-left:920px;}
-.border {padding-right:4px;margin-right:5px;border-right:1px solid #ddd;}
-.colborder {padding-right:24px;margin-right:25px;border-right:1px solid #ddd;}
-.pull-1 {margin-left:-40px;}
-.pull-2 {margin-left:-80px;}
-.pull-3 {margin-left:-120px;}
-.pull-4 {margin-left:-160px;}
-.pull-5 {margin-left:-200px;}
-.pull-6 {margin-left:-240px;}
-.pull-7 {margin-left:-280px;}
-.pull-8 {margin-left:-320px;}
-.pull-9 {margin-left:-360px;}
-.pull-10 {margin-left:-400px;}
-.pull-11 {margin-left:-440px;}
-.pull-12 {margin-left:-480px;}
-.pull-13 {margin-left:-520px;}
-.pull-14 {margin-left:-560px;}
-.pull-15 {margin-left:-600px;}
-.pull-16 {margin-left:-640px;}
-.pull-17 {margin-left:-680px;}
-.pull-18 {margin-left:-720px;}
-.pull-19 {margin-left:-760px;}
-.pull-20 {margin-left:-800px;}
-.pull-21 {margin-left:-840px;}
-.pull-22 {margin-left:-880px;}
-.pull-23 {margin-left:-920px;}
-.pull-24 {margin-left:-960px;}
-.pull-1, .pull-2, .pull-3, .pull-4, .pull-5, .pull-6, .pull-7, .pull-8, .pull-9, .pull-10, .pull-11, .pull-12, .pull-13, .pull-14, .pull-15, .pull-16, .pull-17, .pull-18, .pull-19, .pull-20, .pull-21, .pull-22, .pull-23, .pull-24 {float:left;position:relative;}
-.push-1 {margin:0 -40px 1.5em 40px;}
-.push-2 {margin:0 -80px 1.5em 80px;}
-.push-3 {margin:0 -120px 1.5em 120px;}
-.push-4 {margin:0 -160px 1.5em 160px;}
-.push-5 {margin:0 -200px 1.5em 200px;}
-.push-6 {margin:0 -240px 1.5em 240px;}
-.push-7 {margin:0 -280px 1.5em 280px;}
-.push-8 {margin:0 -320px 1.5em 320px;}
-.push-9 {margin:0 -360px 1.5em 360px;}
-.push-10 {margin:0 -400px 1.5em 400px;}
-.push-11 {margin:0 -440px 1.5em 440px;}
-.push-12 {margin:0 -480px 1.5em 480px;}
-.push-13 {margin:0 -520px 1.5em 520px;}
-.push-14 {margin:0 -560px 1.5em 560px;}
-.push-15 {margin:0 -600px 1.5em 600px;}
-.push-16 {margin:0 -640px 1.5em 640px;}
-.push-17 {margin:0 -680px 1.5em 680px;}
-.push-18 {margin:0 -720px 1.5em 720px;}
-.push-19 {margin:0 -760px 1.5em 760px;}
-.push-20 {margin:0 -800px 1.5em 800px;}
-.push-21 {margin:0 -840px 1.5em 840px;}
-.push-22 {margin:0 -880px 1.5em 880px;}
-.push-23 {margin:0 -920px 1.5em 920px;}
-.push-24 {margin:0 -960px 1.5em 960px;}
-.push-1, .push-2, .push-3, .push-4, .push-5, .push-6, .push-7, .push-8, .push-9, .push-10, .push-11, .push-12, .push-13, .push-14, .push-15, .push-16, .push-17, .push-18, .push-19, .push-20, .push-21, .push-22, .push-23, .push-24 {float:left;position:relative;}
-div.prepend-top, .prepend-top {margin-top:1.5em;}
-div.append-bottom, .append-bottom {margin-bottom:1.5em;}
